[project]
name = "midistream"
dynamic = ["version"]
description = "Python for Android MIDI stream wrapper"
requires-python = ">=3.11,<3.12"
dependencies = []

[build-system]
requires = ["setuptools", "wheel", "Cython<3.0.0"]

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools.dynamic]
version = {attr = "midistream.version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
