[project]
name = "midistream"
dynamic = ["version"]
description = "Python for Android MIDI stream wrapper"
requires-python = ">=3.11,<3.12"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]

[dependency-groups]
dev = [
    "pytest",
    "setuptools",
]

[tool.setuptools.dynamic]
version = {attr = "midistream.version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not functional'"
markers = [
    "functional: tests that use external services or real network downloads",
]
